[package]
name = "three_prototyping"
description = "A project that prototypes both WASM, Three.js, and react-three-fiber"
repository = "https://github.com/jospradlin/three_prototyping"
license = "mit-0"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.89"
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib"]